# Python_basics

./: .version.txt  c2f_file.py  c2f_simple.py  dirty_strings.py  ftemps.txt  hello.py  jpmc.py  pastable.py  scores.py  states.txt  string_fun.py  using_variables.py
ANSWERS/: c2f_file.py  c2f_func.py  c2f_loop_mod.py  c2f_loop_safe.py  c2f_mod.py  c2f_simple.py  calc.py  count_alice.py  count_words.py  f2c.py  file_size.py  guess.py  guessx.py  icount_words.py  knight.py  knight_info.py  line_no.py  pow2.py  pyfind.py  scores.py  scores_by_score.py  sequences.py  shell_users.py  sieve.py  string_fun.py  temp_conv.py  word_freq.py
DATA/: breakfast.txt  ctemps.txt  customerdata1.txt  customerdata2.txt  presidents.txt  test_scores.txt
EXAMPLES/: animal.py  basic_sorting.py  boolean_ops.py  card.py  carddck.py  carddeck.py  class.py  class_methods_and_data.py  count_with_dict.py  creating_dicts.py  creating_tuples.py  custom_sort_keys.py  datetime_ex.py  email_attach.py  email_simple.py  emoji_misc.py  enumerate.py  exception_else.py  exception_finally.py  exception_generic.py  fmt_fill.py  (+107 more)
SETUP/cookiecutter-python-package/{{cookiecutter.package_slug}}/: README.{{cookiecutter.readme_format}}  pyproject.toml
SETUP/cookiecutter-python-package/{{cookiecutter.package_slug}}/docs/source/: conf.py  index.rst
SETUP/cookiecutter-python-package/{{cookiecutter.package_slug}}/src/{{cookiecutter.package_slug}}/: __init__.py  __main__.py  {{cookiecutter.module_slug}}.py
SETUP/cookiecutter-python-package/{{cookiecutter.package_slug}}/tests/: test_{{cookiecutter.module_slug}}.py
(+7 files in other folders)
